Fixing various layout issues with the breakpoints for mobile

--- a/project/assets/styles/mixins.styl
+++ b/project/assets/styles/mixins.styl
@@ -24,3 +24,16 @@ svgmask()
   clip-path polygon(0 10%, 100% 0, 100% 90%, 0% 100%)
   +above(600px)
     clip-path polygon(0 100%,100% 67%,100% 0, 0 33%)
+
+cleanup()
+  position relative!important
+  top 0!important
+  right 0!important
+  bottom 0!important
+  left 0!important
+  margin 0!important
+  padding 0!important
+
+errorCheck()
+  background-color rgba(red, 0.5)
+  border 2px solid rgba(green, 0.5)
