--- a/project/assets/styles/modules/buttons.styl
+++ b/project/assets/styles/modules/buttons.styl
@@ -19,6 +19,8 @@
   outline-offset 0px
   +above(600px)
     font-size 1.2rem
+  +below(600px)
+    width 50%
   &:hover
     color white
     background fifth
