--- a/project/assets/styles/modules/footer.styl
+++ b/project/assets/styles/modules/footer.styl
@@ -2,7 +2,9 @@
 footer
   background-color darken(primary, 20)
   // -webkit-clip-path polygon(0 100%,100% 100%,100% 0, 0 100%)
-  // height 200px
+  height 200px!important
+  +above(600px)
+    height 2rem
   .navbar
     ul
       padding 1rem 0
@@ -20,11 +22,14 @@ footer
         a
           color white
 .footerbar
+  height 100%
   // position absolute
   // right 0
   // bottom 0
   // left 0
   // padding 1rem
+  .navbar
+    height 100%
   h3
     display inline
     width 50%
