--- a/project/assets/styles/modules/latestArticles.styl
+++ b/project/assets/styles/modules/latestArticles.styl
@@ -5,7 +5,9 @@
     margin 0
     li
       list-style none
-      padding-bottom 10rem
+      padding-bottom 1rem
+      +above(600px)
+        padding-bottom 10rem
   h3
     font-size responsive 32px 48px
   // img
